:bug: Fix overflow.

--- a/frontend/scss/components/organisms/case-band.scss
+++ b/frontend/scss/components/organisms/case-band.scss
@@ -6,6 +6,7 @@
 @include levitateAnimation;
 
 .#{utility('case-band')} {
+  overflow: hidden;
   margin-bottom: 7em;
   
   @media screen and (min-width: 768px) {
