--- a/frontend/scss/components/organisms/component-visual.scss
+++ b/frontend/scss/components/organisms/component-visual.scss
@@ -4,6 +4,7 @@
 @import '../../variables';
 
 .#{utility('component-visual')} {
+  overflow: hidden;
   margin-bottom: 7em;
   
   @media screen and (min-width: 768px) {
